--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
     background-color: #222;
     height: 60px;
     padding: 5px 10px;
-    color: white;
+    color: black;
 }
 
 .App-header h1 {
